--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -18,7 +18,7 @@
         border: none;
         transition-duration: 0.2s;
         transition-property: opacity;;
-        &:hover {
+        &:not(.active):hover {
             opacity: 0.5;
         }
         &.active {
