--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,11 @@
 @import 'fonts';
 @import 'start';
 @import 'header';
+@import 'main';
 @import 'meta';
 @import 'categories';
 @import 'sort';
 @import 'goods';
 @import 'pizza-catalog';
 @import 'pizza-item';
+@import 'cart';
