--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -58,6 +58,7 @@
             display: flex;
             align-items: center;
             width: 100%;
+            margin-bottom: 10px;
         }
         &-img {
             width: 80px;
@@ -81,6 +82,8 @@
             align-items: center;
             b {
                 margin: 0 15px;
+                min-width: 30px;
+                text-align: center;
             }
             &-btn {
                 cursor: pointer;
@@ -149,6 +152,13 @@
             flex-wrap: nowrap;
             &-main {
                 width: auto;
+                margin-bottom: 0;
+                flex-grow: 1;
+            }
+            &-price {
+                margin: 0 20px;
+                min-width: 100px;
+                text-align: center;
             }
         }
         &__down { 
