--- a/src/scss/_pizza-item.scss
+++ b/src/scss/_pizza-item.scss
@@ -63,6 +63,7 @@
         cursor: pointer;
         font-weight: 600;
         font-size: 16px;
+        line-height: 22px;
         display: flex;
         align-items: center;
         border-radius: 30px;
